--- a/package.json
+++ b/package.json
@@ -17,9 +17,15 @@
     "@types/node": "^16.18.104",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "pdfjs-dist": "^4.5.136",
+    "aos": "^2.3.4",
+    "firebase": "^10.12.5",
+    "next-themes": "^0.3.0",
+    "ngx-extended-pdf-viewer": "^21.1.2",
+    "pdfjs-dist": "^3.4.120",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
+    "react-icon-cloud": "^4.1.4",
     "react-pdf": "^9.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -54,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "gh-pages": "^6.1.1",
     "tailwindcss": "^3.4.7"
   }
