--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.104",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "aos": "^2.3.4",
+    "eslint": "^8.0.0",
     "firebase": "^10.12.5",
+    "googleapis": "^144.0.0",
     "next-themes": "^0.3.0",
     "ngx-extended-pdf-viewer": "^21.1.2",
     "pdfjs-dist": "^3.4.120",
@@ -60,8 +65,12 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.11.1",
     "@types/aos": "^3.0.7",
+    "eslint-plugin-react": "^7.37.1",
     "gh-pages": "^6.1.1",
-    "tailwindcss": "^3.4.7"
+    "globals": "^15.10.0",
+    "tailwindcss": "^3.4.7",
+    "typescript-eslint": "^8.8.0"
   }
 }
